--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,212 @@ eleventyNavigation:
 {% extends "layouts/base.html" %}
 
 {% block head %}
+
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Lakes Therapy and Counseling Center",
+      "image": "https://murrieta-therapy.b-cdn.net/Square-Logo.png",
+      "@id": "https://murrietatherapy.com/",
+      "url": "https://murrietatherapy.com/",
+      "telephone": "(951) 417-5443",
+      "email": "info@coupleconnectionsd.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "41856 Ivy St STE 205",
+        "addressLocality": "Murrieta",
+        "addressRegion": "CA",
+        "postalCode": "92562",
+        "addressCountry": "US"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "33.556761",
+        "longitude": "-117.213035"
+      },
+      "hasMap": "https://www.google.com/maps/place/41856+Ivy+St+STE+205,+Murrieta,+CA+92562",
+      "openingHours": [
+        "Mo-Sa 09:00-18:00"
+      ],
+      "priceRange": "$$",
+      "sameAs": [
+        "https://www.facebook.com/lakestherapycounselingcenter/",
+        "https://twitter.com/TherapyLakes",
+        "https://www.instagram.com/lakestherapycenter/",
+        "https://www.linkedin.com/in/lakestherapyandcounselingcenter/",
+        "https://www.tiktok.com/@lakestherapycounseling",
+        "https://www.pinterest.com/lakestherapycounseling/",
+        "https://www.youtube.com/@LakesTherapyandCounselingCente",
+        "https://www.tumblr.com/lakestherapyandcounselingcenter",
+        "https://about.me/lakestherapyandcounselingcenter",
+        "https://issuu.com/lakestherapyandcounselingcenter",
+        "https://gravatar.com/lakestherapyandcounselingcenter",
+        "https://www.ted.com/profiles/46040615",
+        "https://www.quora.com/profile/Lakes-Therapy-and-Counseling-Center",
+        "https://medium.com/@lakestherapycenter",
+        "https://soundcloud.com/lakestherapycenter",
+        "https://www.goodreads.com/user/show/174718986-lakes-therapy-and-counseling-center",
+        "https://speakerdeck.com/lakestherapycenter",
+        "https://knowyourmeme.com/users/lakes-therapy",
+        "https://dribbble.com/lakestherapycenter",
+        "https://coub.com/lakestherapycenter",
+        "https://www.magcloud.com/user/lakestherapycenter",
+        "https://github.com/lakestherapycenter",
+        "https://slides.com/lakestherapycenter",
+        "https://lakestherapy.livejournal.com/profile",
+        "https://www.producthunt.com/@lakestherapycenter",
+        "https://www.hometalk.com/member/97528693/lakestherapyandcounselingcenter"
+      ],
+      "founder": {
+        "@type": "Person",
+        "name": "John Bacon Gilbert",
+        "jobTitle": "Founder",
+        "url": "https://murrietatherapy.com/about/"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+1-951-417-5443",
+        "contactType": "customer service",
+        "areaServed": "US",
+        "availableLanguage": "English",
+        "hoursAvailable": {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday",
+            "Saturday"
+          ],
+          "opens": "09:00",
+          "closes": "18:00"
+        }
+      },
+      "additionalType": "http://www.productontology.org/id/Therapy",
+      "description": "Lakes Therapy and Counseling Center specializes in couples therapy, individual therapy, and family therapy. We provide tailored therapeutic services to enhance your emotional health and relationship dynamics.",
+      "slogan": "Empowering Emotional Wellness",
+      "foundingDate": "2021",
+      "numberOfEmployees": "1-10",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "5",
+        "reviewCount": "4"
+      },
+      "review": [
+        {
+          "@type": "Review",
+          "author": "Jessica Silva",
+          "datePublished": "2024-06-15",
+          "reviewBody": "This was our first couples therapy and it was nerve-wracking, but John is such a down to earth person that it felt natural to open up in discussion. With his help we were able to reflect and understand each other more in an entirely new level. I wholeheartedly recommend him! Thank you John once again for simply being you and shining new perspective into our marriage.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5"
+          }
+        },
+        {
+          "@type": "Review",
+          "author": "Jimmy Recourt",
+          "datePublished": "2023-02-01",
+          "reviewBody": "John is great at addressing communication issues, resolving conflicts and helping clients rebuild trust. He shows up with integrity, always prioritizing the well-being of his clients above all else. His empathetic approach fosters open communication and trust.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5"
+          }
+        },
+        {
+          "@type": "Review",
+          "author": "Dana Sockolov",
+          "datePublished": "2023-02-01",
+          "reviewBody": "I can confidently say that John is an exceptional couples therapist. His depth of knowledge, empathy, and professionalism are truly admirable. John has a unique ability to create a supportive and non-judgmental environment where couples feel safe to explore their issues. I highly recommend his services to anyone seeking expert guidance in improving their relationship.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5"
+          }
+        },
+        {
+          "@type": "Review",
+          "author": "Stacy Smith",
+          "datePublished": "2023-02-01",
+          "reviewBody": "John Gilbert is a gifted therapist who values creating safety for people to have authentic healing experiences. He's one of those people whose genuine presence easily shines through, and that's a very important quality to have in a therapist. Highly recommend!",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5"
+          }
+        }
+      ],
+      "areaServed": {
+        "@type": "GeoCircle",
+        "geoMidpoint": {
+          "@type": "GeoCoordinates",
+          "latitude": "33.556761",
+          "longitude": "-117.213035"
+        },
+        "geoRadius": 16093.4,
+        "address": {
+          "@type": "PostalAddress",
+          "postalCode": [
+            "92562", "92564", "92590", "92595", "92589", "92593", "92563", "92584", "92530", "92531", "92591"
+          ]
+        }
+      },
+      "containsPlace": [
+        {
+          "@type": "Place",
+          "name": "Murrieta, CA",
+          "URL": [
+            "https://en.wikipedia.org/wiki/Murrieta,_California",
+            "https://www.google.com/maps/place/Murrieta,+CA"
+          ]
+        },
+        {
+          "@type": "Place",
+          "name": "Temecula, CA",
+          "URL": [
+            "https://en.wikipedia.org/wiki/Temecula,_California",
+            "https://www.google.com/maps/place/Temecula,+CA"
+          ]
+        },
+        {
+          "@type": "Place",
+          "name": "Wildomar, CA",
+          "URL": [
+            "https://en.wikipedia.org/wiki/Wildomar,_California",
+            "https://www.google.com/maps/place/Wildomar,+CA"
+          ]
+        },
+        {
+          "@type": "Place",
+          "name": "Menifee, CA",
+          "URL": [
+            "https://en.wikipedia.org/wiki/Menifee,_California",
+            "https://www.google.com/maps/place/Menifee,+CA"
+          ]
+        },
+        {
+          "@type": "Place",
+          "name": "Lake Elsinore, CA",
+          "URL": [
+            "https://en.wikipedia.org/wiki/Lake_Elsinore,_California",
+            "https://www.google.com/maps/place/Lake+Elsinore,+CA"
+          ]
+        }
+      ],
+      "potentialAction": {
+        "@type": "ReserveAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "https://murrietatherapy.com/schedule/"
+        },
+        "result": {
+          "@type": "Reservation",
+          "name": "Therapy Session"
+        }
+      }
+    }
+    </script>
+    
     <link rel="stylesheet" href="/assets/css/local.css" />
     <link rel="stylesheet" href="/assets/css/critical.css" />
     <script defer src="/assets/js/faq.js"></script>
