--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -3,6 +3,9 @@ title: 'Insurance'
 description: ''
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'insurance/'
+eleventyNavigation:
+    key: Insurance
+    order: 300
 ---
 
 {% extends "layouts/base.html" %}
