--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -1,7 +1,7 @@
 ---
 title: 'Services'
 description: ''
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: 'https://murrieta-therapy.b-cdn.net/Lake-Therapy-and-Counseling-Center-Murrieta-CA.jpg'
 permalink: 'services/'
 eleventyNavigation:
     key: Services
@@ -18,19 +18,6 @@ eleventyNavigation:
 
 {% block body %}
 
-    <!-- ============================================ -->
-    <!--                    LANDING                   -->
-    <!-- ============================================ -->
-
-    <section id="int-hero">
-        <h1 id="home-h">Our Services</h1>
-        <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="kitchen cabinets" loading="eager" width="2500" height="1667">
-        </picture>
-    </section>
-
 <!-- ============================================ -->
 <!--                 Side By Side                 -->
 <!-- ============================================ -->
@@ -44,7 +31,7 @@ eleventyNavigation:
         </picture>
         <div class="cs-content">
             <span class="cs-topper">Lakes Therapy and Counseling Center</span>
-            <h2 class="cs-title">Couples Therapy Murrieta</h2>
+            <h1 class="cs-title">Couples Therapy Murrieta</h1>
             <p class="cs-text">
                 At Lakes Therapy and Counseling Center in Murrieta, CA, we understand that every relationship has its unique set of challenges and strengths. Our Couples Therapy service, also widely recognized as Marriage Counseling, is designed to provide you and your partner with the tools and insights needed to enhance your communication, deepen your connection, and resolve conflicts in a constructive manner.
             </p>
