--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@ eleventyNavigation:
     <script src="https://plugin-api-4.nytroseo.com/api/site/31aac8af-082d-49bb-9474-11f3921770ff/nytroseo.min.js" ></script>
     <meta name="google-site-verification" content="MxoJ9qRmgd4TsxhsVdVwdaNpFBr2D8oyhuG4UfXSPJc" />
     <link rel="icon" href="https://murrieta-therapy.b-cdn.net/gcsdfavwhite%20(1).png">
+    <meta name="google-site-verification" content="MxoJ9qRmgd4TsxhsVdVwdaNpFBr2D8oyhuG4UfXSPJc" />
 
     
 {% endblock %}
