--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -32,7 +32,7 @@ eleventyNavigation:
             <span class="cs-heading">Would You Rather Call or Email?</span>
             <span class="cs-heading">Contact Us Directly:</span>
             <a href="tel:951-417-5443" class="cs-link">(951) 391-3633</a>
-            <a href="mailto:info@coupleconnectionsd.com" class="cs-link">info@coupleconnectionsd.com</a>
+            <a href="mailto:info@murrietatherapy.com" class="cs-link">info@murrietatherapy.com</a>
         </div>
         <!--Form-->
         <form id="cs-form-485" name="15 Minute Consultation Form" method="post" netlify>
