--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -54,7 +54,7 @@ eleventyNavigation:
                     <img loading="lazy" decoding="async" src="https://murrieta-therapy.b-cdn.net/Miranda-Headshot-scaled-e1702056648233.jpg" alt="Photo of Miranda Linden" width="305" height="407">
                 </picture>
                 <div class="cs-info">
-                    <span class="cs-name">Mirana Linden</span>
+                    <span class="cs-name">Miranda Linden</span>
                     <span class="cs-job">AMFT #143240​</span>
                 </div>
             </li>
