--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -57,6 +57,46 @@ eleventyNavigation:
                     <option value="family therapy">Family Therapy</option>
                 </select>
             </label>
+            <label class="cs-label cs-label-message">
+                What type of therapy are you interested in?
+                <select name="Interest" id="cs-select-485">
+                    <option value="couples therapy">Couples Therapy</option>
+                    <option value="individual therapy">Individual Therapy</option>
+                    <option value="family therapy">Family Therapy</option>
+                </select>
+            </label>
+            <label class="cs-label cs-label-message">
+                What type of therapy are you interested in?
+                <select name="Interest" id="cs-select-485">
+                    <option value="couples therapy">Couples Therapy</option>
+                    <option value="individual therapy">Individual Therapy</option>
+                    <option value="family therapy">Family Therapy</option>
+                </select>
+            </label>
+            <label class="cs-label cs-label-message">
+                What type of therapy are you interested in?
+                <select name="Interest" id="cs-select-485">
+                    <option value="couples therapy">Couples Therapy</option>
+                    <option value="individual therapy">Individual Therapy</option>
+                    <option value="family therapy">Family Therapy</option>
+                </select>
+            </label>
+            <label class="cs-label cs-label-message">
+                What type of therapy are you interested in?
+                <select name="Interest" id="cs-select-485">
+                    <option value="couples therapy">Couples Therapy</option>
+                    <option value="individual therapy">Individual Therapy</option>
+                    <option value="family therapy">Family Therapy</option>
+                </select>
+            </label>
+            <label class="cs-label cs-label-message">
+                What type of therapy are you interested in?
+                <select name="Interest" id="cs-select-485">
+                    <option value="couples therapy">Couples Therapy</option>
+                    <option value="individual therapy">Individual Therapy</option>
+                    <option value="family therapy">Family Therapy</option>
+                </select>
+            </label>
             <label class="cs-label">
                 Anything You'd Like Us To Know?
                 <textarea class="cs-textarea" type="text" id="find-485" name="info" placeholder="If you'd like, you can give us info info about why you're seeking therapy or what you're seeking therapy for."></textarea>
