--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -58,11 +58,10 @@ eleventyNavigation:
                 </select>
             </label>
             <label class="cs-label cs-label-message">
-                What type of therapy are you interested in?
-                <select name="Interest" id="cs-select-485">
-                    <option value="couples therapy">Couples Therapy</option>
-                    <option value="individual therapy">Individual Therapy</option>
-                    <option value="family therapy">Family Therapy</option>
+                Do you prefer a female or male therapist?
+                <select name="Gender" id="cs-select-485">
+                    <option value="couples therapy">Male</option>
+                    <option value="individual therapy">Female</option>
                 </select>
             </label>
             <label class="cs-label cs-label-message">
