--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -60,8 +60,8 @@ eleventyNavigation:
             <label class="cs-label cs-label-message">
                 Do you prefer a female or male therapist?
                 <select name="Gender" id="cs-select-485">
-                    <option value="couples therapy">Male</option>
-                    <option value="individual therapy">Female</option>
+                    <option value="couples therapy">Female</option>
+                    <option value="individual therapy">Male</option>
                 </select>
             </label>
             <label class="cs-label cs-label-message">
