--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -62,6 +62,7 @@ eleventyNavigation:
                 <select name="Gender" id="cs-select-485">
                     <option value="couples therapy">Female</option>
                     <option value="individual therapy">Male</option>
+                    <option value="individual therapy">No Preference</option>
                 </select>
             </label>
             <label class="cs-label cs-label-message">
