--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -66,11 +66,11 @@ eleventyNavigation:
                 </select>
             </label>
             <label class="cs-label cs-label-message">
-                What type of therapy are you interested in?
-                <select name="Interest" id="cs-select-485">
-                    <option value="couples therapy">Couples Therapy</option>
-                    <option value="individual therapy">Individual Therapy</option>
-                    <option value="family therapy">Family Therapy</option>
+                What time of the day works best for the initial consultation.
+                <select name="Time" id="cs-select-485">
+                    <option value="couples therapy">Any Time With Planning</option>
+                    <option value="individual therapy">Mornings</option>
+                    <option value="family therapy">Lunch (11am - 1pm)</option>
                 </select>
             </label>
             <label class="cs-label cs-label-message">
