--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -60,17 +60,19 @@ eleventyNavigation:
             <label class="cs-label cs-label-message">
                 Do you prefer a female or male therapist?
                 <select name="Gender" id="cs-select-485">
-                    <option value="couples therapy">Female</option>
-                    <option value="individual therapy">Male</option>
-                    <option value="individual therapy">No Preference</option>
+                    <option value="female">Female</option>
+                    <option value="male">Male</option>
+                    <option value="no preference">No Preference</option>
                 </select>
             </label>
             <label class="cs-label cs-label-message">
                 What time of the day works best for the initial consultation.
                 <select name="Time" id="cs-select-485">
-                    <option value="couples therapy">Any Time With Planning</option>
-                    <option value="individual therapy">Mornings</option>
-                    <option value="family therapy">Lunch (11am - 1pm)</option>
+                    <option value="any time with planning">Any Time With Planning</option>
+                    <option value="morning">Mornings</option>
+                    <option value="lunch">Lunch (11am - 1pm)</option>
+                    <option value="evening">Evening (4pm - 6pm)</option>
+                    <option value="after 7pm">After 7pm</option>
                 </select>
             </label>
             <label class="cs-label cs-label-message">
