--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -66,7 +66,7 @@ eleventyNavigation:
                 </select>
             </label>
             <label class="cs-label cs-label-message">
-                What time of the day works best for the initial consultation.
+                What time of the day works best for the initial consultation?
                 <select name="Time" id="cs-select-485">
                     <option value="any time with planning">Any Time With Planning</option>
                     <option value="morning">Mornings</option>
@@ -76,9 +76,9 @@ eleventyNavigation:
                 </select>
             </label>
             <label class="cs-label cs-label-message">
-                What type of therapy are you interested in?
-                <select name="Interest" id="cs-select-485">
-                    <option value="couples therapy">Couples Therapy</option>
+                If you decide to work with us, what time of the day works best for your scheduled sessions?
+                <select name="Scheduled" id="cs-select-485">
+                    <option value="flexible">I don't work a consistent schedule so I'm flexible</option>
                     <option value="individual therapy">Individual Therapy</option>
                     <option value="family therapy">Family Therapy</option>
                 </select>
