--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -79,8 +79,10 @@ eleventyNavigation:
                 If you decide to work with us, what time of the day works best for your scheduled sessions?
                 <select name="Scheduled" id="cs-select-485">
                     <option value="flexible">I don't work a consistent schedule so I'm flexible</option>
-                    <option value="individual therapy">Individual Therapy</option>
-                    <option value="family therapy">Family Therapy</option>
+                    <option value="any">Any time, I make my own schedule</option>
+                    <option value="family therapy">Mornings</option>
+                    <option value="family therapy">Lunch Time</option>
+                    <option value="family therapy">Evenings</option>
                 </select>
             </label>
             <label class="cs-label cs-label-message">
