--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -80,9 +80,9 @@ eleventyNavigation:
                 <select name="Scheduled" id="cs-select-485">
                     <option value="flexible">I don't work a consistent schedule so I'm flexible</option>
                     <option value="any">Any time, I make my own schedule</option>
-                    <option value="family therapy">Mornings</option>
-                    <option value="family therapy">Lunch Time</option>
-                    <option value="family therapy">Evenings</option>
+                    <option value="mornings">Mornings</option>
+                    <option value="lunch">Lunch Time</option>
+                    <option value="evenings">Evenings</option>
                 </select>
             </label>
             <label class="cs-label cs-label-message">
