--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -68,7 +68,7 @@ eleventyNavigation:
             <label class="cs-label cs-label-message">
                 What time of the day works best for the initial consultation?
                 <select name="Time" id="cs-select-485">
-                    <option value="any time with planning">Any Time With Planning</option>
+                    <option value="any time with planning">Any time with planning</option>
                     <option value="morning">Mornings</option>
                     <option value="lunch">Lunch (11am - 1pm)</option>
                     <option value="evening">Evening (4pm - 6pm)</option>
@@ -81,24 +81,23 @@ eleventyNavigation:
                     <option value="flexible">I don't work a consistent schedule so I'm flexible</option>
                     <option value="any">Any time, I make my own schedule</option>
                     <option value="mornings">Mornings</option>
-                    <option value="lunch">Lunch Time</option>
+                    <option value="lunch">Lunch time</option>
                     <option value="evenings">Evenings</option>
                 </select>
             </label>
             <label class="cs-label cs-label-message">
-                What type of therapy are you interested in?
-                <select name="Interest" id="cs-select-485">
-                    <option value="couples therapy">Couples Therapy</option>
-                    <option value="individual therapy">Individual Therapy</option>
-                    <option value="family therapy">Family Therapy</option>
+                For our free consultation together, how do you prefer to meet?
+                <select name="Consultation" id="cs-select-485">
+                    <option value="zoom">Video/Online with Zoom</option>
+                    <option value="phone">Phone call</option>
                 </select>
             </label>
             <label class="cs-label cs-label-message">
-                What type of therapy are you interested in?
-                <select name="Interest" id="cs-select-485">
-                    <option value="couples therapy">Couples Therapy</option>
-                    <option value="individual therapy">Individual Therapy</option>
-                    <option value="family therapy">Family Therapy</option>
+                How soon are you interested in starting sessions?
+                <select name="Timing" id="cs-select-485">
+                    <option value="now">First available</option>
+                    <option value="no rush">No rush, but I'm committed to starting</option>
+                    <option value="try">I'm not sure I'm ready yet, but I thought I'd try something new</option>
                 </select>
             </label>
             <label class="cs-label">
