--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -4,8 +4,8 @@ description: ''
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'insurance/'
 eleventyNavigation:
-    key: Insurance
-    order: 300
+    key: 
+    order: 
 ---
 
 {% extends "layouts/base.html" %}
