--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -31,7 +31,7 @@ eleventyNavigation:
             </p>
             <span class="cs-heading">Would You Rather Call or Email?</span>
             <span class="cs-heading">Contact Us Directly:</span>
-            <a href="tel:951-417-5443" class="cs-link">(951) 391-3633</a>
+            <a href="tel:+18779403037" class="cs-link">(877) 940-3047</a>
             <a href="mailto:info@murrietatherapy.com" class="cs-link">info@murrietatherapy.com</a>
         </div>
         <!--Form-->
