--- a/src/content/pages/location.html
+++ b/src/content/pages/location.html
@@ -153,9 +153,9 @@ eleventyNavigation:
 <section id="RPsbsr-1445">
     <div class="cs-container">
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/Miranda-Headshot-scaled-e1702056648233%20(1).jpg">
-            <source media="(min-width: 601px)" srcset="https://murrieta-therapy.b-cdn.net/Miranda-Headshot-scaled-e1702056648233%20(1).jpg">
-            <img loading="lazy" decoding="async" src="https://murrieta-therapy.b-cdn.net/Miranda-Headshot-scaled-e1702056648233%20(1).jpg" alt="Miranda Linden, Couples Therapy in Murrieta, CA" width="650" height="600" aria-hidden="true">
+            <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/romantic-couple-watching-tv.webp">
+            <source media="(min-width: 601px)" srcset="https://murrieta-therapy.b-cdn.net/romantic-couple-watching-tv.webp">
+            <img loading="lazy" decoding="async" src="https://murrieta-therapy.b-cdn.net/romantic-couple-watching-tv.webp" alt="Miranda Linden, Couples Therapy in Murrieta, CA" width="650" height="600" aria-hidden="true">
         </picture>
         <div class="cs-content">
             <span class="cs-topper">About Us</span>
