--- a/src/content/pages/location.html
+++ b/src/content/pages/location.html
@@ -463,6 +463,8 @@ eleventyNavigation:
                     <span class="cs-job">LMFT#125762</span>
                 </div>
             </li>
+            <li class="cs-item">
+            </li>
         </ul>
     </div>
 </section>
