--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -68,17 +68,7 @@ eleventyNavigation:
                 </select>
             </label>
             <label class="cs-label cs-label-message">
-                If you decide to work with us, what time of the day works best for your scheduled sessions?
-                <select name="Scheduled" id="cs-select-485">
-                    <option value="flexible">I don't work a consistent schedule so I'm flexible</option>
-                    <option value="any">Any time, I make my own schedule</option>
-                    <option value="mornings">Mornings</option>
-                    <option value="lunch">Lunch time</option>
-                    <option value="evenings">Evenings</option>
-                </select>
-            </label>
-            <label class="cs-label cs-label-message">
-                For our free consultation together, how do you prefer to meet?
+                For your initial consultation, do you prefer meeting on the phone or online with video (Your sessions would be in person if you prefer)?
                 <select name="Consultation" id="cs-select-485">
                     <option value="zoom">Video/Online with Zoom</option>
                     <option value="phone">Phone call</option>
