--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -75,11 +75,10 @@ eleventyNavigation:
                 </select>
             </label>
             <label class="cs-label cs-label-message">
-                How soon are you interested in starting sessions?
-                <select name="Timing" id="cs-select-485">
-                    <option value="now">First available</option>
-                    <option value="no rush">No rush, but I'm committed to starting</option>
-                    <option value="try">I'm not sure I'm ready yet, but I thought I'd try something new</option>
+                Do you hope to use insurance for therapy?
+                <select name="Use Insurance?" id="cs-select-485">
+                    <option value="now">No</option>
+                    <option value="no rush">Yes</option>
                 </select>
             </label>
             <label class="cs-label">
