--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -82,6 +82,10 @@ eleventyNavigation:
                 </select>
             </label>
             <label class="cs-label">
+                For a full service therapist, what amount are you willing to invest in weekly sessions?
+                <input class="cs-input" required type="text" id="email-485" name="investment" placeholder="Enter the dollar amount">
+            </label>
+            <label class="cs-label">
                 Anything You'd Like Us To Know?
                 <textarea class="cs-textarea" type="text" id="find-485" name="info" placeholder="If you'd like, you can give us info info about why you're seeking therapy or what you're seeking therapy for."></textarea>
             </label>
