--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -24,9 +24,9 @@ eleventyNavigation:
     <section id="int-hero">
         <h1 id="home-h">Blog</h1>
         <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="kitchen cabinets" loading="eager" width="2500" height="1667">
+            <source media="(max-width: 600px)" srcset="https://lh3.googleusercontent.com/p/AF1QipO5EmEgG2f9jDdGBgu-4EQschzDF79wpSqmlrsI">
+            <source media="(min-width: 601px)" srcset="https://lh3.googleusercontent.com/p/AF1QipO5EmEgG2f9jDdGBgu-4EQschzDF79wpSqmlrsI">
+            <img aria-hidden="true" decoding="async" src="https://lh3.googleusercontent.com/p/AF1QipO5EmEgG2f9jDdGBgu-4EQschzDF79wpSqmlrsI" alt="Menifee, CA" loading="eager" width="2500" height="1667">
         </picture>
     </section>
 
