--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -70,15 +70,15 @@ eleventyNavigation:
             <label class="cs-label cs-label-message">
                 For your initial consultation, do you prefer meeting on the phone or online with video (Your sessions would be in person if you prefer)?
                 <select name="Consultation Type?" id="cs-select-485">
-                    <option value="zoom">Video/Online with Zoom</option>
-                    <option value="phone">Phone call</option>
+                    <option value="Zoom">Video/Online with Zoom</option>
+                    <option value="Phone">Phone call</option>
                 </select>
             </label>
             <label class="cs-label cs-label-message">
                 Do you hope to use insurance for therapy?
                 <select name="Use Insurance?" id="cs-select-485">
-                    <option value="now">No</option>
-                    <option value="no rush">Yes</option>
+                    <option value="Now">No</option>
+                    <option value="Yes">Yes</option>
                 </select>
             </label>
             <label class="cs-label">
@@ -88,8 +88,8 @@ eleventyNavigation:
             <label class="cs-label cs-label-message">
                 How do you want us to contact you?
                 <select name="How To Contact?" id="cs-select-485">
-                    <option value="now">Email</option>
-                    <option value="no rush">Phone</option>
+                    <option value="Email">Email</option>
+                    <option value="Phone">Phone</option>
                 </select>
             </label>
             <label class="cs-label">
