--- a/src/content/pages/schedule.html
+++ b/src/content/pages/schedule.html
@@ -77,7 +77,7 @@ eleventyNavigation:
             <label class="cs-label cs-label-message">
                 Do you hope to use insurance for therapy?
                 <select name="Use Insurance?" id="cs-select-485">
-                    <option value="Now">No</option>
+                    <option value="No">No</option>
                     <option value="Yes">Yes</option>
                 </select>
             </label>
