--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -27,7 +27,8 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">Use Your Insurance Benefits</span>
-            <h1 class="cs-title">How To Use Insurance</h1>
+            <h1 class="cs-title">
+Lakes Therapy and Counseling Center proudly accepts the CareCredit credit card for all your health and wellness wants or needs.</h1>
             <p class="cs-text">
                 We know that many of our clients want to use insurance, so have partnered with Mentaya to help you access out-of-network benefits to save money on therapy. Use this tool below to see if you qualify for reimbursement for my services.
             </p>             
