--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -28,13 +28,14 @@ eleventyNavigation:
         <div class="cs-content">
             <span class="cs-topper">Use Your Insurance Benefits</span>
             <h1 class="cs-title">
-Lakes Therapy and Counseling Center proudly accepts the CareCredit credit card for all your health and wellness wants or needs.</h1>
+                Lakes Therapy and Counseling Center proudly accepts the CareCredit credit card for all your health and wellness wants or needs.</h1>
             <p class="cs-text">
                 We know that many of our clients want to use insurance, so have partnered with Mentaya to help you access out-of-network benefits to save money on therapy. Use this tool below to see if you qualify for reimbursement for my services.
             </p>             
         </div>
         <picture class="cs-picture">
-            <iframe width="100%" height=430 style="border:none;border-radius:20px;max-width:600px;margin:auto;display:block;" onload="const resize=() => this.height=this.clientWidth >= 600?430:750;resize();window.addEventListener('resize', resize);" src="https://app.mentaya.com/public/practices/GEhnf12KnXtQAECQEddU/eligibility/widget" title="Check Mentaya eligibility"></iframe>
+            <iframe width="326" height="232" class="assetIframe" style="border:0" src="//www.carecredit.com/providercenter/getassetcalculator/?size=326x232&color=328b7f&plate=276GSP"></iframe>
+
         </picture>
     </div>
 </section>
