--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -26,9 +26,8 @@ eleventyNavigation:
 <section id="sbsr-1444">
     <div class="cs-container">
         <div class="cs-content">
-            <span class="cs-topper">Use Your Insurance Benefits</span>
-            <h1 class="cs-title">
-                Lakes Therapy and Counseling Center proudly accepts the CareCredit credit card for all your health and wellness wants or needs.</h1>
+            <span class="cs-topper">Financing Available</span>
+            <h1 class="cs-title">We Accept Care Credit</h1>
             <p class="cs-text">
                 We know that many of our clients want to use insurance, so have partnered with Mentaya to help you access out-of-network benefits to save money on therapy. Use this tool below to see if you qualify for reimbursement for my services.
             </p>             
