--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -29,14 +29,19 @@ eleventyNavigation:
             <span class="cs-topper">Financing Available</span>
             <h1 class="cs-title">We Accept Care Credit</h1>
             <p class="cs-text">
-                We know that many of our clients want to use insurance, so have partnered with Mentaya to help you access out-of-network benefits to save money on therapy. Use this tool below to see if you qualify for reimbursement for my services.
+                Couple Connection San Diego proudly accepts the CareCredit credit card for all your health and wellness wants or needs. ​
             </p>             
         </div>
-
-        <div class="cs-container">
+    </div>
+    <div class="cs-container">
         <div class="cs-content">
-            <iframe width="326" height="232" class="assetIframe" style="border:0" src="//www.carecredit.com/providercenter/getassetcalculator/?size=326x232&color=328b7f&plate=276GSP"></iframe>         
+            <span class="cs-topper">Financing Available</span>
+            <h1 class="cs-title">We Accept Care Credit</h1>
+            <p class="cs-text">
+                Couple Connection San Diego proudly accepts the CareCredit credit card for all your health and wellness wants or needs. ​
+            </p>             
         </div>
+    </div>
 </section>
                                 
 {% endblock %}
