--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -23,6 +23,27 @@ eleventyNavigation:
 <!--             Side By Side Reverse             -->
 <!-- ============================================ -->
 
+<section id="RPsbsr-1445">
+    <div class="cs-container">
+        <picture class="cs-picture">
+            <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/romantic-couple-watching-tv.webp">
+            <source media="(min-width: 601px)" srcset="https://murrieta-therapy.b-cdn.net/romantic-couple-watching-tv.webp">
+            <img loading="lazy" decoding="async" src="https://murrieta-therapy.b-cdn.net/romantic-couple-watching-tv.webp" alt="Miranda Linden, Couples Therapy in Murrieta, CA" width="650" height="600" aria-hidden="true">
+        </picture>
+        <div class="cs-content">
+            <span class="cs-topper">About Us</span>
+            <h2 class="cs-title">Lakes Therapy and Counseling Center in Murrieta, CA</h2>
+            <p class="cs-text">
+                <a href="https://murrietatherapy.com">Lakes Therapy and Counseling Center</a>, located in the heart of Murrieta, CA, is dedicated to providing a range of specialized therapy services designed to meet the diverse needs of our community. With a focus on building healthier relationships and enhancing individual well-being, our center offers expert marriage counseling, couples therapy, and individual therapy sessions. Each therapy modality is delivered by our compassionate and highly skilled therapists who are committed to creating a supportive and confidential environment. Whether our clients are seeking to resolve relationship issues, manage personal challenges, or simply pursue personal growth, Lakes Therapy and Counseling Center is equipped to guide them on their journey to healing and self-discovery.
+            </p>
+            <p class="cs-text">
+                Our <a href="https://murrietatherapy.com/services/">therapy services</a> are distinct yet interconnected, catering to various aspects of psychological and emotional health. Marriage counseling at Lakes Therapy is ideal for couples looking to address specific marital challenges or to deepen their connection through better communication and understanding. Couples therapy extends beyond marital counseling to include all types of relationships, focusing on resolving conflicts, enhancing intimacy, and strengthening bonds. For individuals, our therapy sessions target issues such as anxiety, depression, and stress management, promoting personal growth and resilience. Emotionally Focused Therapy (EFT) is a cornerstone of our practice, utilized across all therapy types to explore and enhance emotional attachments and improve interpersonal dynamics. At Lakes Therapy and Counseling Center, we provide the tools and insights necessary for our clients to lead more fulfilling lives, both in their relationships and personal spheres.
+            </p>    
+            <a href="https://murrietatherapy.com/schedule/" class="cs-button-solid">Free Consultation</a>        
+        </div>
+    </div>
+</section>
+
 <section id="sbsr-1444">
     <div class="cs-container">
         <div class="cs-content">
