--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -26,9 +26,7 @@ eleventyNavigation:
 <section id="sbsr-1444">
     <div class="cs-container">
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/romantic-couple-watching-tv.webp">
-            <source media="(min-width: 601px)" srcset="https://murrieta-therapy.b-cdn.net/romantic-couple-watching-tv.webp">
-            <img loading="lazy" decoding="async" src="https://murrieta-therapy.b-cdn.net/romantic-couple-watching-tv.webp" alt="Miranda Linden, Couples Therapy in Murrieta, CA" width="650" height="600" aria-hidden="true">
+            <iframe width="326" height="232" class="assetIframe" style="border:0" src="//www.carecredit.com/providercenter/getassetcalculator/?size=326x232&color=328b7f&plate=276GSP"></iframe>
         </picture>
         <div class="cs-content">
             <span class="cs-topper">About Us</span>
