--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -29,15 +29,17 @@ eleventyNavigation:
             <iframe width="326" height="232" class="assetIframe" style="border:0" src="//www.carecredit.com/providercenter/getassetcalculator/?size=326x232&color=328b7f&plate=276GSP"></iframe>
         </picture>
         <div class="cs-content">
-            <span class="cs-topper">About Us</span>
-            <h2 class="cs-title">Lakes Therapy and Counseling Center in Murrieta, CA</h2>
+            <span class="cs-topper">Financing Available</span>
+            <h1 class="cs-title">Pay online with the CareCredit credit card</h1>
             <p class="cs-text">
-                <a href="https://murrietatherapy.com">Lakes Therapy and Counseling Center</a>, located in the heart of Murrieta, CA, is dedicated to providing a range of specialized therapy services designed to meet the diverse needs of our community. With a focus on building healthier relationships and enhancing individual well-being, our center offers expert marriage counseling, couples therapy, and individual therapy sessions. Each therapy modality is delivered by our compassionate and highly skilled therapists who are committed to creating a supportive and confidential environment. Whether our clients are seeking to resolve relationship issues, manage personal challenges, or simply pursue personal growth, Lakes Therapy and Counseling Center is equipped to guide them on their journey to healing and self-discovery.
+                We proudly accept the CareCredit credit card to help you finance your healthcare needs. Now you can pay online with CareCredit to help pay at the time of care, when you get a post-care bill, or up to 30 days before your appointment, quickly and securely. Special financing options are available.*
             </p>
             <p class="cs-text">
-                Our <a href="https://murrietatherapy.com/services/">therapy services</a> are distinct yet interconnected, catering to various aspects of psychological and emotional health. Marriage counseling at Lakes Therapy is ideal for couples looking to address specific marital challenges or to deepen their connection through better communication and understanding. Couples therapy extends beyond marital counseling to include all types of relationships, focusing on resolving conflicts, enhancing intimacy, and strengthening bonds. For individuals, our therapy sessions target issues such as anxiety, depression, and stress management, promoting personal growth and resilience. Emotionally Focused Therapy (EFT) is a cornerstone of our practice, utilized across all therapy types to explore and enhance emotional attachments and improve interpersonal dynamics. At Lakes Therapy and Counseling Center, we provide the tools and insights necessary for our clients to lead more fulfilling lives, both in their relationships and personal spheres.
-            </p>    
-            <a href="https://murrietatherapy.com/schedule/" class="cs-button-solid">Free Consultation</a>        
+                Don't have CareCredit? Apply here or learn more [insert your custom link] today.
+            </p>
+            <p class="cs-text">
+                *Subject to credit approval. Minimum monthly payments required. Promotional financing options are available on purchases of $200 or more. Standard Account Terms apply to purchases of less than $200. Promotional financing options available through Pay My Provider may differ from options available in-office. See www.carecredit.com for details.
+            </p>
         </div>
     </div>
 </section>
