--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -28,6 +28,13 @@ eleventyNavigation:
         <picture class="cs-picture">
             <iframe width="326" height="232" class="assetIframe" style="border:0" src="//www.carecredit.com/providercenter/getassetcalculator/?size=326x232&color=328b7f&plate=276GSP"></iframe>
         </picture>
+        <picture class="cs-picture">
+                    <!--Mobile Image-->
+                    <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/John-Preferred-Homepage%20(1).jpg">
+                    <!--Tablet and above Image-->
+                    <source media="(min-width: 601px)" srcset="https://murrieta-therapy.b-cdn.net/John-Preferred-Homepage%20(1).jpg">
+                    <img loading="lazy" decoding="async" src="https://murrieta-therapy.b-cdn.net/John-Preferred-Homepage%20(1).jpg" alt="Photo of John Bacon Gilbert" width="305" height="407">
+                </picture>
         <div class="cs-content">
             <span class="cs-topper">Financing Available</span>
             <h1 class="cs-title">Pay online with the CareCredit credit card</h1>
