--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -27,7 +27,8 @@ eleventyNavigation:
     <div class="cs-container">
         <picture class="cs-picture">
             <iframe width="326" height="232" class="assetIframe" style="border:0" src="//www.carecredit.com/providercenter/getassetcalculator/?size=326x232&color=328b7f&plate=276GSP"></iframe>
-            <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/John-Preferred-Homepage%20(1).jpg">
+        </br>
+        <img loading="lazy" decoding="async" src="https://murrieta-therapy.b-cdn.net/John-Preferred-Homepage%20(1).jpg" alt="Photo of John Bacon Gilbert" width="305" height="407">
         </picture>
     
         <div class="cs-content">
