--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -1,11 +1,11 @@
 ---
-title: 'Insurance'
+title: 'Financing'
 description: ''
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'insurance/'
+permalink: 'financing/'
 eleventyNavigation:
-    key:
-    order:
+    key: Financing
+    order: 300
 ---
 
 {% extends "layouts/base.html" %}
