--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -33,7 +33,7 @@ eleventyNavigation:
                 We proudly accept the CareCredit credit card to help you finance your healthcare needs. Now you can pay online with CareCredit to help pay at the time of care, when you get a post-care bill, or up to 30 days before your appointment, quickly and securely. Special financing options are available.*
             </p>
             <p class="cs-text">
-                Don't have CareCredit? Apply here or learn more [insert your custom link] today.
+                Don't have CareCredit? <a href="https://www.carecredit.com/go/276GSP/">Apply here or learn more</a> today.
             </p>
             <p class="cs-text">
                 *Subject to credit approval. Minimum monthly payments required. Promotional financing options are available on purchases of $200 or more. Standard Account Terms apply to purchases of less than $200. Promotional financing options available through Pay My Provider may differ from options available in-office. See www.carecredit.com for details.
