--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -40,9 +40,11 @@ eleventyNavigation:
             </p>
         </div>
 
-        <picture class="cs-picture">
-            <iframe width="326" height="232" class="assetIframe" style="border:0" src="//www.carecredit.com/providercenter/getassetcalculator/?size=326x232&color=328b7f&plate=276GSP"></iframe>
-        </picture>
+        <picture class="cs-picture cs-picture2">
+                    <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/John-Bacon-Gilbert.png">
+                    <source media="(min-width: 601px)" srcset="https://murrieta-therapy.b-cdn.net/John-Bacon-Gilbert.png">
+                    <img aria-hidden="true" decoding="async" src="https://murrieta-therapy.b-cdn.net/John-Bacon-Gilbert.png" alt="John Bacon Gilbert, the founder of Lakes Therapy and Counseling Center" loading="lazy" width="400" height="563">
+                </picture>
     
         
     </div>
